# rosbridge-rosbag-player

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.autoware  README.md  entrypoint.sh  player.launch
.github/workflows/: build_and_push_docker_images.yml
src/controllable_rosbag_player/: CMakeLists.txt  package.xml
src/controllable_rosbag_player/launch/: sample.launch
src/controllable_rosbag_player/scripts/: player.py
src/controllable_rosbag_player/srv/: Seek.srv  SetPlaybackSpeed.srv
src/controllable_rosbag_player/test/: test_pause.sh  test_play.sh  test_seek.sh
src/rosbridge_observer/: CMakeLists.txt  package.xml
src/rosbridge_observer/launch/: sample.launch
src/rosbridge_observer/scripts/: observer.py
